Bug 124385 - toolkit: UnknownPropertyException on setModel() call
Summary: toolkit: UnknownPropertyException on setModel() call
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-28 09:16 UTC by Vasily Melenchuk (CIB)
Modified: 2019-04-04 13:02 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Beanshell test script (1.57 KB, text/plain)
2019-03-28 09:17 UTC, Vasily Melenchuk (CIB)
Details
Working beanshell script (2.14 KB, text/plain)
2019-04-04 06:00 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vasily Melenchuk (CIB) 2019-03-28 09:16:53 UTC
Description:
Attached beanshell scripts is failing with UnknownPropertyException during setModel()

Steps to Reproduce:
Run beanshell script

Actual Results:
Exception dialog

Expected Results:
No exception


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Vasily Melenchuk (CIB) 2019-03-28 09:17:30 UTC
Created attachment 150344 [details]
Beanshell test script
Comment 2 Commit Notification 2019-03-28 10:53:11 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/4abb7335529a66346a2a68a089b9c8438faa2e39%5E%21

tdf#124385: toolkit: do not fail if ResourceListener is not defined

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Samuel Mehrbrodt 2019-04-04 06:00:20 UTC
Created attachment 150520 [details]
Working beanshell script
Comment 4 Samuel Mehrbrodt 2019-04-04 06:00:59 UTC
With attachment 150520 [details] it is possible to create a tab control.
So this is fixed now.
Comment 5 Commit Notification 2019-04-04 13:02:58 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/5b9d543b7255eab74c401dee803bbac4a4ceef8a%5E%21

tdf#124385: toolkit: do not fail if ResourceListener is not defined

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.